test/conformance/kuttl/exceptions/check-images/standard/03-resource.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: resource-rejected.yaml
  # shouldFail: true
