test/conformance/kuttl/exceptions/check-images/standard/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-image
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: check-image
      match:
        any:
        - resources:
            kinds:
              - Pod
      verifyImages:
      - imageReferences:
        - "testimage"
        # attestors:
        # - count: 1
        #   entries:
        #   - keys:
        #       publicKeys: |-
        #         -----BEGIN PUBLIC KEY-----
        #         MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM
        #         5/KAQN0/KjHcorm/J5yctVd7iEcnessRQjU917hmKO6JWVGHpDguIyakZA==
        #         -----END PUBLIC KEY-----
