test/conformance/kuttl/exceptions/check-images/standard/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-image
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
